Fix button spacing
Now it looks not bad :cat:

--- a/style.css
+++ b/style.css
@@ -83,11 +83,13 @@ button {
     background-color: var(--special-color);
     border: 0;
     border-radius: 3.4px;
-    padding: 6px 9px;
+    padding: 8px 16px;
     margin: 5px;
     transition: background-color 0.5s;
     text-transform: uppercase;
     font-weight: 500;
+    letter-spacing: 0.69px;
+    font-size: 12.3px;
 }
 
 button:hover {
